Review fixes: unify routing contract across Go/Java/TS workers
Resolves all nine ENG-REVIEW markers and applies the engineering review.
All workers now follow one routing contract:

- Boot: fail fast if the initial routes fetch fails — a baseline worker
  with an empty cache would execute sandbox-routed tasks. Java previously
  started silently with an empty cache.
- Runtime: routing decisions never throw. Unknown keys trigger a
  rate-limited (1s) cache refresh and always fall back to the cached
  rules, so a routeserver outage cannot fail tasks (restores the TS
  stale-cache fallback removed in the previous commit).
- Rejections: always task-level failures retried by the server, with a
  1s next-retry delay so wrong-worker bounces skip the app backoff. The
  Go workflow interceptor previously returned an error on a routing-check
  failure, which permanently fails the workflow in the Go SDK; it now
  panics (task failure) like the rejection path.

Java worker:
- The workflow routing decision now runs as the signadotShouldProcess
  local activity (recorded in history, replay-stable), resolving the
  ENG-REVIEW design fork the same way as Go/TS.
- Local activities are exempt from the routing check (they retry on the
  same worker and could never migrate to the right one).
- The activity interceptor restores the full OTel context (trace context
  plus all baggage members) via the W3C propagators instead of rebuilding
  a single-member baggage.
- logback.xml added (root INFO) — the unconfigured default was DEBUG.

Go worker:
- ROUTES_API_REFRESH_INTERVAL_SECONDS is now applied (was parsed but
  never used); the routes HTTP client has a 10s timeout (was unbounded);
  scheme-less routeserver addresses are handled.
- W3C trace/baggage propagators are registered at startup so bridged
  baggage is actually injected by OTel-instrumented HTTP clients.
- A malformed baggage header is logged and skipped instead of failing
  the activity identically on every worker forever.
- Th